# agora

./: README.md  functional_python_style_guide.md  pyproject.toml
config/: logging_config.py  settings.py
core/card_system/: card_base_model.py  card_errors_model.py  card_provider.py  card_reports_model.py  card_state_model.py  visibility_manager.py
core/event_system/: __init__.py  event_models.py  event_provider.py  events.py
core/model_system/: model_provider.py
core/narrative_system/: __init__.py  narrative_models.py  narrative_provider.py
core/utils/: __init__.py
engine/dm_ai/: dm_agent.py  prompt_templates.py
engine/player_module/: player_models.py  player_provider.py
engine/story_engine/: game_state.py  story_models.py  story_provider.py
game_data/dm_profiles/: narrative_dm.yaml
game_data/player_archetypes/: catgirl.yaml  sorceress.yaml  vampire.yaml
game_data/story_backgrounds/: faurun.yaml
game_data/world_elements/: __init__.py
game_data/world_elements/factions/: church_of_bhaal.yaml
game_data/world_elements/items/: healing_potion.yaml
game_data/world_elements/locations/: mulmaster.yaml  old_tavern.yaml
game_data/world_elements/npcs/: bhaal.yaml
